--- a/index.ipynb
+++ b/index.ipynb
@@ -164,7 +164,8 @@
     }
    ],
    "source": [
-    "\"art vandelay\" # 'Art Vandelay'"
+    "<\"art vandelay\".title>\n",
+    "# 'Art Vandelay'"
    ]
   },
   {
