--- a/index.ipynb
+++ b/index.ipynb
@@ -202,7 +202,8 @@
    },
    "outputs": [],
    "source": [
-    "<\"art.vandelay@vandelay.co\">.endswith # False"
+    "<\"art.vandelay@vandelay.co\">.endswith\".com\n",
+    "\" # False"
    ]
   },
   {
