--- a/index.ipynb
+++ b/index.ipynb
@@ -209,7 +209,7 @@
     }
    ],
    "source": [
-    "<\"art.vandelay@vandelay.co\">.endswith(.com\" # False"
+    "<\"art.vandelay@vandelay.co\">.endswith(.com) # False"
    ]
   },
   {
