--- a/index.ipynb
+++ b/index.ipynb
@@ -196,20 +196,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-6-297dc4b08e1f>, line 1)",
+     "evalue": "invalid syntax (<ipython-input-7-8b89994de158>, line 1)",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-6-297dc4b08e1f>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    <\"art.vandelay@vandelay.co\">.endswith(\".com\") # False\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-7-8b89994de158>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    <'art.vandelay@vandelay.co'>.endswith('.com') # False\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
      ]
     }
    ],
    "source": [
-    "<'art.vandelay@vandelay.co'>.endswith(.com\") # False"
+    "<'art.vandelay@vandelay.co'>.endswith('.com') # False"
    ]
   },
   {
