--- a/index.ipynb
+++ b/index.ipynb
@@ -196,20 +196,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-7-8b89994de158>, line 1)",
+     "ename": "NameError",
+     "evalue": "name 'art' is not defined",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-7-8b89994de158>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    <'art.vandelay@vandelay.co'>.endswith('.com') # False\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+      "\u001b[0;31m\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0mTraceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-8-f5b1717776a7>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mart\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mvandelay\u001b[0m\u001b[0;34m@\u001b[0m\u001b[0mvandelay\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mco\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mendswith\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'.com'\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;31m# False\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'art' is not defined"
      ]
     }
    ],
    "source": [
-    "<'art.vandelay@vandelay.co.endswith('.com') # False"
+    "art.vandelay@vandelay.co.endswith('.com') # False"
    ]
   },
   {
