Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -212,7 +212,9 @@
     }
    ],
    "source": [
-    "art.vandelay@vandelay.co.endswith('.com') # False"
+    "txt = art.vandelay@vandelay.co\n",
+    "\n",
+    "endswith('.com') # False"
    ]
   },
   {
