Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -212,7 +212,7 @@
     }
    ],
    "source": [
-    "txt = art.vandelay@vandelay.co\n",
+    "txt = \"art.vandelay@vandelay.co'\n",
     "\n",
     "txt.endswith('.com') # False"
    ]
